#Nmap Changelog ($Id$); -*-text-*-

o Upgraded included libraries: Lua 5.4.7, libssh2 1.11.1, libpcap 1.10.5,
  libpcre 10.45

o [NSE] New script targets-ipv6-eui64 generates target IPv6 addresses from a
  user-provided file of MAC addresses, using the EUI-64 method. [Daniel Miller]

o [NSE][GH#2973] New service probes and scripts for MikroTik's WinBox router
  admin service. mikrotik-routeros-version queries the 'info' and 'list' files
  to get the RouterOS version. mikrotik-routeros-username-brute brute-forces
  usernames for the router using CVE-2024-54772. [deauther890, Daniel Miller]

o [GH#2954] Fix 2 potential crashes in parsing IPv6 extension headers
  discovered using AFL++ fuzzer. [Domen Puncer Kugler, Daniel Miller]

o [Nping] Bind raw socket to device when possible. This was already done for
  IPv6, but was needed for IPv4 L3 tunnels. [ValdikSS]

o [Ncat] Ncat in connect mode no longer defaults to half-closed TCP
  connections. This makes it more compatible with other netcats. The -k option
  will enable the old behavior. See https://seclists.org/nmap-dev/2013/q1/188
  [Daniel Miller]

o [Nsock][GH#2788] Fix an issue affecting Ncat where unread bytes in the SSL
  layer's buffer could not be read until more data arrived on the socket, which
  could lead to deadlock. [Daniel Miller]

o [Ncat][GH#2422] New Ncat option -q to delay quit after EOF on stdin, the
  same as traditional netcat's -q option. [Daniel Miller]

o [NSE][GH#1014][GH#2616] SSH NSE scripts now catch connection errors thrown by
  the libssh2 Lua binding, providing useful output instead of a backtrace.
  [Joshua Rogers, Daniel Miller]

o Nmap will now allow targets to be specified both on the command line and in
  an input file with -iL. Previously, if targets were provided in both places,
  only the targets in the input file would be scanned, and no notice was given
  that the command-line targets were ignored. [Daniel Miller]
